--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple responsive card page",
   "main": "index.js",
   "scripts": {
-    "app": "nodemon --exec \"tailwind build web/styles.css -o web/tailwind.css && node index.js\"",
+    "app": "nodemon --exec \"tailwind build web/assets/css/styles.css -o web/assets/css/tailwind.css && node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
